--- a/todo/Client/package.json
+++ b/todo/Client/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "next": "10.0.6",
+    "nodemon": "^2.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
